# kiro

./: .gitignore  README.md
agents/: README.md  aws-architect.json  aws-cost-analyst.json  doc-updater.json  eks-troubleshooter.json  gitlab-ci-engineer.json  gitlab-ci-troubleshooter.json  gitlab-duo-instructions-author.json  mr-reviewer.json  pipeline-troubleshooter.json  platform-orchestrator.json  powerpipe-report-author.json  python-lambda-author.json  security-auditor.json  steering-curator.json  terraform-reviewer.json
docs/: README.md  agents-guide.md  aws-access-isolation.md  headless-guide.md  install.md  mcp-guide.md  steering-guide.md  use-cases.md
docs/specs/: 2026-05-07-kiro-config-catalog-design.md  2026-06-10-superpowers-port.md
headless/: gitlab-ci.sample.yml  kiro-headless.sh
hooks/: cli-pre-tool-secret-scan.md  pre-commit-py-lint.kiro.hook  pre-commit-tf-fmt.kiro.hook
kiro-tutorial/: course.html  module-07-multi-agent.md  module-08-hooks.md  module-09-specs.md  module-10-context.md  module-11-orchestration.md  module-12-operating-surface.md  module-13-best-practices.md  module-14-labs.md
mcp/: mcp.sample.json
prompts/: mr-description.md  new-lambda.md  new-terraform-module.md  review-iac.md  runbook.md
scripts/: install.sh  list.sh  manifest.txt  sage.sh
settings/: cli.sample.json
skills/: README.md
skills/automation-solutions/: SKILL.md
skills/automation-solutions/references/: cost-and-safety.md  scheduling.md  workflows.md
skills/automation-solutions/scripts/: install-hooks.sh
skills/aws-solution-architect/: SKILL.md
skills/aws-solution-architect/assets/: adr.md  design-doc.md  threat-model-worksheet.md
skills/aws-solution-architect/references/: account-topology.md  compute-selection.md  cost-optimization.md  data-selection.md  identity.md  networking.md  reference-architectures.md  resilience.md  security-baseline.md  well-architected.md
skills/aws-solution-architect/templates/: architecture-review-checklist.md
skills/gitlab-duo-review/: SKILL.md
skills/gitlab-duo-review/assets/: mr-review-instructions.yaml
skills/gitlab-duo-review/references/: best-practices.md  instruction-format.md  real-world-example.md  review-workflow.md
skills/gitlab-duo-review/scripts/: detect-stack.sh  validate-instructions.sh
skills/gitlab-pipeline/: SKILL.md
skills/gitlab-pipeline/assets/: .gitlab-ci.yml  aws-oidc.yml  review-app.yml  terraform-deploy.yml
skills/gitlab-pipeline/references/: cache-vs-artifacts.md  multi-environment.md  oidc-cloud-auth.md  quality-gates.md  rules-and-workflow.md
skills/gitlab-pipeline/scripts/: detect-changed-modules.sh
skills/kubernetes-eks/: SKILL.md
skills/powerpipe-reporting/: SKILL.md
skills/python-devops-aws/: SKILL.md
skills/python-devops-aws/assets/: pyproject.toml
skills/python-lambda/: SKILL.md
skills/python-lambda/assets/: Dockerfile  handler.py  pyproject.toml  test_handler.py
skills/security-code-reviewer/: SKILL.md
skills/skill-creator/: DEVELOPER_GUIDE.md  SKILL.md
skills/steampipe/: SKILL.md
skills/superpowers/: SKILL.md
skills/terraform-aws/: SKILL.md
skills/terragrunt-multi-account/: SKILL.md
steering/: aws-security.md  gitlab-ci-conventions.md  gitops-workflow.md  kubernetes-conventions.md  lambda-conventions.md  powerpipe-reporting.md  python-conventions.md  secrets-handling.md  superpowers-tools.md  tech.md  terraform-conventions.md  terragrunt-conventions.md
(+131 files in other folders)
