# PEP 621 project metadata for a Python 3.12 Lambda function.
#
# Install for local development:
#   pip install -e ".[dev]"
#
# Build a Lambda-compatible deployment artifact: see ../scripts/build_zip.sh
# (uses --platform manylinux2014_x86_64 / aarch64 to download Linux wheels).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-orders"
version = "0.1.0"
description = "Orders Lambda handler"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "aws-lambda-powertools[parser,tracer]>=3.0,<4.0",
    "pydantic>=2.7,<3.0",
    "boto3>=1.34,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[dynamodb,s3,sqs]>=5.0",
    "boto3-stubs[essential]>=1.34",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# ---- Ruff ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # simplify
    "RUF",            # ruff-specific
]

# ---- Mypy ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# ---- Pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
